@@ -148,6 +148,9 @@ Mantis ChangeLog
  * New config option (custom_field_edit_after_create): new option to control whether a user is directed to edit a custom field after creating it
  * Enhancement: User names are now auto-generated for accounts that no longer exists.  The user names are prefixed by the string (prefix_for_deleted_users).
  * Fix: when viewing all bugs for all projects you no longer see bugs from disabled projects
+ * New config option (create_project_threshold): provide a threshold for users who can create projects
+ * New config option (delete_project_threshold): provide a threshold for users who can delete projects
+ 
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
